--- a/src/css/client.css
+++ b/src/css/client.css
@@ -143,7 +143,7 @@
 
 .left__nav ul a {
     background-color: #fff;
-    color: black;
+    color: #5c5959;
     text-decoration: none;
     display: block;
     text-align: center;
@@ -217,6 +217,8 @@
 /* Панель работы с клиентами */
 .panell__controll {
     background-color: #fff;
+    display: flex;
+    justify-content: space-between;
 }
 
 .panell__controll button {
@@ -230,7 +232,38 @@
     color: white;
 }
 
-.panell__controll button:first-of-type {
+.search__controll {
+    display: flex;
+}
+
+.search {
+    display: inline-block;
+    margin: 10px 0;
+    padding: 10px 40px;
+    padding-left: 10px;
+    width: 300px;
+    border: none;
+    border: 1px solid #5c5959;
+}
+
+.panell__controll #search__label {
+    display: inline-block;
+    width: 37px;
+    height: 37px;
+    background-image: url('../../build/img/icons/search.png');
+    margin-top: 10px;
+}
+
+.search::placeholder {
+    color: #BDC3C3;
+}
+
+button.search__button {
+    margin: 10px 0;
+    margin-right: 20px;
+}
+
+.panell__controll .add__client {
     margin-left: 1.25rem;
 }
 
@@ -297,6 +330,10 @@
 
 }
 
+.left__nav li a.active__link {
+    border: 2px solid var(--main-color);
+}
+
 /* Модальное окно */
 .modal {
     display: none;
@@ -323,7 +360,7 @@
     position: relative;
 }
 
-.modal label::before {
+.modal__label::before {
     content: '';
     height: 20px;
     width: 20px;
@@ -333,7 +370,7 @@
     top: -3px;
 }
 
-.client__form label {
+.client__form .modal__label {
     display: inline-block;
     width: 100px;
 }
@@ -393,8 +430,7 @@
 
 #man:checked+label,
 #woman:checked+label {
-    background-color: var(--main-color);
-    color: white;
+    border: 2px solid var(--main-color);
 }
 
 .gender__div label:last-of-type {
