--- a/src/css/font.css
+++ b/src/css/font.css
@@ -1,5 +1,5 @@
 @font-face {
     font-family: "Open Sans";
-    src: url("fonts/OpenSans-Regular.woff") format("woff"),
-        url("fonts/OpenSans-Regular.ttf") format("ttf");
+    src: url("fonts/OpenSansHebrew-Regular.woff") format("woff"),
+        url("fonts/OpenSansHebrew-Regular.ttf") format("ttf");
 }
