--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
 body {
     margin-top: 0px;
     padding-top: 0px;
+    font-family: Open Sans, sans-serif;
 }
 
 .logo__wrapper {
@@ -71,7 +72,7 @@ input::placeholder {
     margin-bottom: 1.5rem;
 }
 
-label::before {
+.main__label::before {
     content: '';
     height: 20px;
     width: 20px;
@@ -100,6 +101,8 @@ label::before {
     left: -12px;
     top: -10px;
 }
+
+
 
 .logo__form,
 .forget {
