--- a/src/css/change.css
+++ b/src/css/change.css
@@ -8,6 +8,8 @@
     background-image: url(../../build/img/icons/back__arrow.png);
     background-repeat: no-repeat;
     background-position: 15px;
+    margin-left: 45px;
+    margin-top: 25px;
 }
 
 .button__change {
@@ -16,5 +18,26 @@
     color: var(--main-text);
     background-color: #fff;
     padding: 10px 25px;
-    margin-left: 30px;
+    margin-left: 125px;
+}
+
+.about__user {
+    padding: 45px;
+    display: flex;
+}
+
+.user__photo {
+    border-right: 1px solid rgba(0, 0, 0, .6);
+    display: flex;
+    flex-direction: column;
+    padding-right: 50px;
+}
+
+.change__photo {
+    display: block;
+    margin-top: 20px;
+    padding: 15px 55px;
+    background-color: var(--main-color);
+    color: #fff;
+    border: none;
 }
