Разметка секции подробной информации о клиенте

--- a/src/css/change.css
+++ b/src/css/change.css
@@ -24,6 +24,7 @@
 .about__user {
     padding: 45px;
     display: flex;
+    color: var(--main-text);
 }
 
 .user__photo {
@@ -40,4 +41,54 @@
     background-color: var(--main-color);
     color: #fff;
     border: none;
+}
+
+.hidden__photo {
+    display: none;
+}
+
+.wrapper-user {
+    padding: 0 55px;
+}
+
+.main__client p {
+    margin-bottom: 30px;
+}
+
+.main__client p span {
+    border: 1px solid var(--main-text);
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+
+.phone__user {
+    color: var(--main-color);
+    border: 1px solid var(--main-text);
+    padding: 5px 40px;
+    padding-left: 10px;
+    display: inline-block;
+    border-radius: 10px;
+    margin-left: 100px;
+}
+
+.phone__user::before {
+    content: '';
+    display: inline-block;
+    width: 23px;
+    height: 23px;
+    background-image: url(../../build/img/icons/phone__user.png);
+    position: relative;
+    left: -115px;
+    top: 5px;
+}
+
+.main__filiall {
+    border-top: 1px solid var(--main-text);
+    padding-top: 20px;
+}
+
+.wrapper__customer {
+    text-align: center;
+    padding: 0 55px;
+    margin-left: 200px;
 }
