--- a/src/css/client.css
+++ b/src/css/client.css
@@ -302,7 +302,7 @@ button.search__button {
 .main__table {
     background-color: #fff;
     width: 100%;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     padding: 10px;
 }
 
